2013-02-26  Roland Clobus <rclobus@rclobus.nl>
	* server/meta.c, server/admin.c, server/server.h, client/gtk/connect.c,
	common/network.h, common/state.c, common/network.c: Added Session to
	callbacks. Fixed handling of the metaserver protocol.

2013-02-24  Roland Clobus <rclobus@rclobus.nl>
	* configure.ac, server/server.c, server/server.h, server/main.c,
	server/admin.c, server/admin.h, server/gtk/main.c, server/meta.c,
	Makefile.am, metaserver/README.protocol, metaserver/meta-report,
	metaserver/main.c, metaserver/Makefile.am, client/gtk/admin-gtk.c,
	client/gtk/frontend.h, client/gtk/offline.c, client/gtk/connect.c,
	client/help/C/pioneers.xml, po/POTFILES.in, ChangeLog,
	docs/pioneers-server-gtk.6, docs/pioneers-meta-server.6,
	docs/pioneers-metaserver.6, docs/pioneers.6, docs/Makefile.am,
	docs/pioneers-server-console.6, common/network.c, common/network.h,
	common/gtk/metaserver.c: Fixed variants of the spelling of 
	meta[- _]server to metaserver.

2013-02-23  Roland Clobus <rclobus@rclobus.nl>
	* server/server.c, server/admin.c, server/admin.h: Used the correct
	port in the admin interface.

2013-02-19  Roland Clobus <rclobus@rclobus.nl>
	* configure.ac, server/meta.c, server/avahi.c, server/player.c,
	client/common/client.c, common/game.c, common/game.h: Moved the #define
	of PROTOCOL_VERSION to the enum ClientVersionType for a single location
	to keep the PROTOCOL_VERSION.

2013-02-17  Roland Clobus <rclobus@rclobus.nl>
	* admin-scripts/list.sh: Works for 5/6-player game too.

2013-02-15  Roland Clobus <rclobus@rclobus.nl>
	* server/admin.c, server/admin.h, server/meta.c, client/gtk/connect.c,
	common/state.c, common/network.c, common/network.h: Removed function
	casts for NetNotifyFunc.
	* server/admin.c, common/network.c, common/network.h: Revert of the
	change on 2012-04-03, now the admin interface works again.
	* server/turn.c, server/admin.c, server/admin.h, server/main.c: The
	admin interface uses the current game. Cleanup of private functions.
